<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Rojo"
    android:foregroundTint="#303233"
    android:orientation="vertical">



    <ImageView
        android:id="@+id/blurryImage"
        android:layout_width="705dp"
        android:layout_height="715dp"
        android:alpha="0.2"
        android:contentDescription="@string/blurryImageDescripcion"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/barraArriba"
        app:srcCompat="@drawable/applogo" />

    <Button
        android:id="@+id/barraArriba"
        android:layout_width="412dp"
        android:layout_height="55dp"
        android:background="@color/Negro"
        android:clickable="false"
        android:translationZ="-10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/menuOpcion1"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="90dp"
        android:layout_marginBottom="20dp"
        android:alpha="0.9"
        android:background="@color/Amarillo"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/Blanco"
        android:textSize="18sp"
        android:onClick="onClickMenuOpcion1"
        app:layout_constraintBottom_toTopOf="@+id/menuOpcion2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/barraArriba" />

    <TextView
        android:id="@+id/opcion1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:text="@string/menuFrutas"
        android:textColor="@color/Blanco"
        android:textSize="20sp"
        android:translationZ="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/menuOpcion1"
        app:layout_constraintStart_toEndOf="@+id/frutaimg"
        app:layout_constraintTop_toTopOf="@+id/menuOpcion1"
        app:layout_constraintVertical_bias="0.506" />

    <ImageView
        android:id="@+id/frutaimg"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:translationZ="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/menuOpcion1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/menuOpcion1"
        android:contentDescription="@string/Frutas"
        app:srcCompat="@drawable/frutas"
        tools:ignore="MissingConstraints" />


    <Button
        android:id="@+id/menuOpcion2"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:alpha="0.8"
        android:background="@color/Amarillo"
        android:onClick="onClickMenuOpcion2"
        app:layout_constraintBottom_toTopOf="@+id/menuOpcion3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menuOpcion1" />

    <TextView
        android:id="@+id/opcion2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:text="@string/menuHidratacion"
        android:textColor="@color/Blanco"
        android:textSize="20sp"
        android:translationZ="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/menuOpcion2"
        app:layout_constraintStart_toEndOf="@+id/correrimg"
        app:layout_constraintTop_toBottomOf="@+id/menuOpcion1"
        app:layout_constraintVertical_bias="0.681" />

    <ImageView
        android:id="@+id/correrimg"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="10dp"
        android:translationZ="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/menuOpcion2"
        app:layout_constraintStart_toStartOf="@+id/menuOpcion2"
        app:layout_constraintTop_toTopOf="@+id/menuOpcion2"
        android:contentDescription="@string/menuCorrer"
        app:srcCompat="@drawable/hidra" />

    <Button
        android:id="@+id/menuOpcion3"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:alpha="0.7"
        android:background="@color/Amarillo"
        android:onClick="onClickMenuOpcion3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menuOpcion2" />

    <TextView
        android:id="@+id/opcion3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:text="@string/menuComida"
        android:textColor="@color/Blanco"
        android:textSize="20sp"
        android:translationZ="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/menuOpcion3"
        app:layout_constraintStart_toEndOf="@+id/ejercimg"
        app:layout_constraintTop_toBottomOf="@+id/menuOpcion2" />


    <ImageView
        android:id="@+id/ejercimg"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="16dp"
        android:translationZ="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/menuOpcion3"
        app:layout_constraintStart_toStartOf="@+id/menuOpcion3"
        app:layout_constraintTop_toBottomOf="@+id/menuOpcion2"
        app:layout_constraintVertical_bias="0.707"
        android:contentDescription="@string/menuEjercicio"
        app:srcCompat="@drawable/comidadiaria" />

    <Button
        android:id="@+id/informacionGeneral"
        android:layout_width="249dp"
        android:layout_height="40dp"
        android:layout_marginStart="81dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="81dp"
        android:background="@drawable/roundedbutton"
        android:backgroundTint="@color/Amarillo"
        android:text="@string/informacion"
        android:onClick="onClickInfoGeneral"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ejercimg" />

    <RelativeLayout
        android:layout_width="410dp"
        android:layout_height="55dp"
        android:clickable="false"
        android:translationZ="10dp"
        app:layout_constraintEnd_toEndOf="@+id/barraArriba"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tituloScreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="120dp"
            android:layout_marginTop="10dp"
            android:text="@string/metasAlimentarias"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/Blanco"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/appLogo"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/logoDescripcion"
            android:translationZ="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/applogo" />

        <Button
            android:id="@+id/botonLogo"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:alpha="0.2"
            android:background="@drawable/roundedbutton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </RelativeLayout>

    <Button
        android:id="@+id/barraAbajo"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/Negro"
        android:clickable="false"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:clickable="false"
        android:translationZ="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/barraArriba"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" >

        <ImageView
            android:id="@+id/userNameLogo"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:contentDescription="@string/userLogoDescription"
            app:srcCompat="@drawable/userlogo2" />

        <TextView
            android:id="@+id/userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="16dp"
            android:layout_toEndOf="@+id/userNameLogo"
            android:text="@string/userName"
            android:textColor="@color/Blanco"
            android:translationZ="10dp" />

        <TextView
            android:id="@+id/nivelPalabra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="16dp"
            android:layout_toStartOf="@+id/nivelEstrella"
            android:text="@string/nivelPalabra"
            android:textColor="@color/Blanco" />

        <TextView
            android:id="@+id/nivelNumero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/nivelEstrella"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="11dp"
            android:text="@string/userLevel"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/Blanco"
            android:translationZ="10dp" />

        <ImageView
            android:id="@+id/nivelEstrella"
            android:layout_width="80dp"
            android:layout_height="90dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="0dp"
            android:contentDescription="@string/nivelEstrellaDescription"
            app:srcCompat="@drawable/estrella" />



    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>