<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Rojo"
    android:foregroundTint="#303233"
    android:orientation="vertical">

    <include layout="@layout/appbar"></include>
    <include layout="@layout/bottomappbar"></include>


    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabsMetasPerso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        app:layout_constraintBottom_toTopOf="@+id/viewpagerMetasPers"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tabBackground="@color/Negro"
        app:tabIndicatorColor="@color/Blanco"
        app:tabTextColor="@color/Blanco">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/levelUpTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab1MetasPerso" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/comidaTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab2MetasPerso" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/deporteTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab3MetasPerso"
            android:tint="@color/Amarillo" />
    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewpagerMetasPers"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabsMetasPerso" />

    <ImageView
        android:id="@+id/blurryImage9"
        android:layout_width="684dp"
        android:layout_height="652dp"
        android:layout_marginBottom="55dp"
        android:alpha="0.2"
        android:contentDescription="@string/blurryImageDescripcion"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/applogo" />


</androidx.constraintlayout.widget.ConstraintLayout>